--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,3 +49,51 @@ a {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
+ /******************* pagenation ********************/
+ .pagenationConainer{
+  background-color: rgb(242, 245, 248);
+  margin: 0.5rem auto;
+
+}
+.page-item.active .page-link{
+  font-weight: bold;
+  color: #0B152A !important;
+  width: 3rem;
+  margin:10px !important;
+  background-color: transparent !important;
+}
+.page-link{
+  color: #a2a3a7 !important;
+  font-weight: bold;
+  margin:0.5rem;
+  border: none !important;
+  background-color: transparent !important;
+}
+.page-item.active{
+  background-color: #ffffff !important;
+  border: 2px solid #114D80 !important;
+  border-radius: 5px !important;
+  color: #0B152A !important;
+  height: 30px !important;
+  width: 34px !important;
+}
+.page-prev{
+  margin: 0 0.8rem;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  border-radius: 5px;
+  color: #0B152A !important;
+}
+.page-next{
+  margin: 0 0.8rem;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  border-radius: 5px;
+  color: #0B152A !important;
+}
+.pagination{
+  display: flex !important;
+  align-items: center !important;
+  list-style: none;
+  margin: 1rem 0;
+}
